# candidate-recommender-diagnostics-demo

./: README.md  report.md
candidate-recommender-diagnostics-demo/: Makefile  README.md  pyproject.toml
candidate-recommender-diagnostics-demo/code/: recommender.py
candidate-recommender-diagnostics-demo/tests/: test_environment.py
code/: diagnostics.py  improved_recommender.py  validation.py
