[project]
name = "sii-interview-internal-ml-team"
version = "0.1.0"
description = "SII ML team interview takehome tasks (recommender diagnostics + skills taxonomy reconciliation)."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Alan Tetich", email = "atetich@sii.pl" },
]
dependencies = [
    "pandas>=2.2",
    "numpy>=2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pandas-stubs>=2.2",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
target-version = "py313"
extend-exclude = [
    ".venv",
    "venv",
    "data",
    ".idea",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "htmlcov",
    # Baseline scripts shipped to the candidate as input — read-only artifacts,
    # not candidate code, so they should not be reformatted or relinted.
    "takehome_recommender_task/code/recommender.py",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "N",    # pep8-naming
    "PL",   # pylint
    "PTH",  # use pathlib
]
ignore = [
    "PLR2004",  # magic value comparisons — fine in analytic scripts
    "PLR0913",  # too many arguments
    "PLR0915",  # too many statements
    "T201",     # print() — these are scripts, prints are fine
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101", "PLC0415"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
pretty = true
show_error_codes = true
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
exclude = [
    "\\.venv",
    "venv",
    "data",
    # Baseline given to candidate as-is — not their code to type-check.
    "takehome_recommender_task/code/recommender\\.py",
]

[tool.pytest.ini_options]
testpaths = ["tests", "takehome_recommender_task", "takehome_taxonomy_task"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
